@@ -1,12 +1,14 @@
 // Copyright Yahoo. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
 package com.yahoo.vespa.model.ml;
 
+import com.google.common.collect.ImmutableList;
 import com.yahoo.config.model.ApplicationPackageTester;
 import ai.vespa.rankingexpression.importer.configmodelview.MlModelImporter;
 import com.yahoo.config.model.deploy.DeployState;
 import com.yahoo.io.GrowableByteBuffer;
 import com.yahoo.io.IOUtils;
 import com.yahoo.path.Path;
+import com.yahoo.searchdefinition.RankingConstant;
 import ai.vespa.rankingexpression.importer.lightgbm.LightGBMImporter;
 import ai.vespa.rankingexpression.importer.onnx.OnnxImporter;
 import ai.vespa.rankingexpression.importer.tensorflow.TensorFlowImporter;
@@ -19,12 +21,10 @@ import org.xml.sax.SAXException;
 
 import java.io.IOException;
 import java.io.UncheckedIOException;
-import java.util.List;
 import java.util.Optional;
 
 import static junit.framework.TestCase.assertTrue;
 import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
 
 /**
  * Helper for testing of imported models.
@@ -34,11 +34,11 @@ import static org.junit.Assert.assertNotNull;
  */
 public class ImportedModelTester {
 
-    private final List<MlModelImporter> importers = List.of(new TensorFlowImporter(),
-                                                            new OnnxImporter(),
-                                                            new LightGBMImporter(),
-                                                            new XGBoostImporter(),
-                                                            new VespaImporter());
+    private final ImmutableList<MlModelImporter> importers = ImmutableList.of(new TensorFlowImporter(),
+                                                                              new OnnxImporter(),
+                                                                              new LightGBMImporter(),
+                                                                              new XGBoostImporter(),
+                                                                              new VespaImporter());
 
     private final String modelName;
     private final Path applicationDir;
@@ -69,10 +69,9 @@ public class ImportedModelTester {
     public void assertLargeConstant(String constantName, VespaModel model, Optional<Long> expectedSize) {
         try {
             Path constantApplicationPackagePath = Path.fromString("models.generated/" + modelName + "/constants").append(constantName + ".tbf");
-            var constant = model.rankProfileList().constants().asMap().get(constantName);
-            assertNotNull(constant);
-            assertEquals(constantName, constant.getName());
-            assertTrue(constant.getFileName().endsWith(constantApplicationPackagePath.toString()));
+            RankingConstant rankingConstant = model.rankingConstants().get(constantName);
+            assertEquals(constantName, rankingConstant.getName());
+            assertTrue(rankingConstant.getFileName().endsWith(constantApplicationPackagePath.toString()));
 
             if (expectedSize.isPresent()) {
                 Path constantPath = applicationDir.append(constantApplicationPackagePath);
